[gd_scene load_steps=2 format=3 uid="uid://bl7xc4pwm8bhg"]

[ext_resource type="Script" path="res://src/menu.gd" id="1_hr3kk"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_hr3kk")

[node name="PlayButton" type="Button" parent="."]
offset_right = 100.0
offset_bottom = 50.0
text = "Lancer"

[node name="QuitButton" type="Button" parent="."]
offset_right = 100.0
offset_bottom = 50.0
text = "Quitter"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
offset_left = 312.0
offset_top = 37.0
offset_right = 595.0
offset_bottom = 280.0
theme_override_constants/separation = 20

[node name="StudentLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Nombre d'étudiants : 5"

[node name="StudentSlider" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 1.0
max_value = 15.0
value = 5.0
tick_count = 15
ticks_on_borders = true

[node name="SpeedLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Vitesse de la maîtresse : 10"

[node name="SpeedSlider" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 5.0
max_value = 25.0
step = 5.0
value = 15.0
tick_count = 5
ticks_on_borders = true

[node name="CheeseLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Nombre de fromages : 10"

[node name="CheeseSlider" type="HSlider" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = 10.0
step = 10.0
value = 10.0
tick_count = 10
ticks_on_borders = true

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_exit_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/StudentSlider" to="." method="_on_student_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SpeedSlider" to="." method="_on_speed_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/CheeseSlider" to="." method="_on_cheese_slider_value_changed"]
